# blitz-lang

./: .gitignore  .gitmodules  AGENTS.md  C_BOOTSTRAP.md  README.md  STRING_METHODS_IMPLEMENTATION.md  TYPE_COLLISION_FIX_REPORT.md  example.anti  example.blitz  test_char_comparison.blitz  test_collision_a.blitz  test_collision_b.blitz  test_else_if.blitz  test_lists.blitz  test_read.blitz  test_simple.blitz  test_simple_collision.md  test_string_c.c  test_string_methods.blitz  test_switch_comprehensive.blitz  test_switch_expr.blitz  test_switch_literals.blitz  test_union.blitz  tree-sitter-blitz-info.md
.github/scripts/: perf_regression.py
.github/workflows/: perf.yml  test.yml
bootstrap/: Cargo.toml
bootstrap/c-output/: blitz.c  blitz.h  blitz_types.h
bootstrap/interpreter/: Cargo.toml  build-and-run.sh  callperf.sh  grep  perf.sh
bootstrap/interpreter/src/: c_codegen.rs  c_codegen_patch.rs  instruction.rs  lib.rs  main.rs  registry.rs  runtime.rs
bootstrap/parser/: Cargo.toml  example.anti
bootstrap/parser/example/: blocks.blitz  call.blitz  expr.blitz  func.blitz
bootstrap/parser/src/: ast.anti  lexer.rs  lib.rs  main.rs  parser.rs  precedence.rs  print.rs  tokens.anti  tokens.blitz
bootstrap/parser/src/ast/: definition.blitz  expression.blitz  operator.blitz
bootstrap/type-macro/: Cargo.toml
bootstrap/type-macro/src/: lib.rs
compiler/: compile.blitz  main.blitz
compiler/ast/: definition.blitz  error.blitz  expression.blitz  operator.blitz  (+1 more)
examples/: call_test.blitz  call_test2.blitz  call_test_comprehensive.blitz
proposals/: BEP001-traits
(+28 files in other folders)
